Fixed avatar positioning on small screens

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -109,7 +109,9 @@ body {
 	line-height: 1;
     text-align: center;
     padding: 0;
-    position: relative;
+	position: absolute;
+	top: 8px;
+	right: 10px;
 }
 
 /* Main content area */
